[package]
name = "usi-run"
version = "0.8.1"
authors = ["nozaq"]
description = "A command line utility for running games between USI compliant Shogi engines."
keywords = ["shogi", "usi", "sfen"]
categories = ["command-line-utilities", "game-engines"]
repository = "https://github.com/nozaq/usi-run"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2"
csa = "0.6"
indicatif = "0.11"
console = "0.9"
shogi = "0.10"
toml = "0.5"
usi = "0.4"

[badges]
travis-ci = { repository = "nozaq/usi-run" }
appveyor = { repository = "nozaq/usi-run" }

[profile.test]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
