[package]
name = "usi-run"
version = "0.9.2"
authors = ["nozaq"]
description = "A command line utility for running games between USI compliant Shogi engines."
keywords = ["shogi", "usi", "sfen"]
categories = ["command-line-utilities", "game-engines"]
repository = "https://github.com/nozaq/usi-run"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
time = "0.3"
clap = { version = "4", features = ["cargo"]}
console = "0.15"
csa = "1.0"
indicatif = "0.17"
shogi = "0.12"
toml = "0.7"
usi = "0.6"

[badges]
travis-ci = { repository = "nozaq/usi-run" }
appveyor = { repository = "nozaq/usi-run" }

[profile.test]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
